# Mugiwara

./: .gitignore  README.md  Theme.md  package-lock.json  package.json  quotes.json
app/: globals.css  layout.js  loading.js  page.js
app/api/auth/session/: route.js
app/api/episodes/[id]/: route.js
app/api/homepage/: route.js
app/api/info/[id]/: route.js
app/api/resolve/: route.js
app/api/search/: route.js
app/api/skip-times/: route.js
app/api/source/: route.js
app/api/stream/: route.js
app/api/user/continue-watching/: route.js
app/api/user/history/: route.js
app/api/user/me/: route.js
app/api/user/watchlist/: route.js
app/search/: page.js
app/watch/[id]/[ep]/: page.js
components/: AnimeCard.jsx  AnimeRow.jsx  AuthModal.jsx  ContinueWatchingRow.jsx  HeroWatchButton.jsx  Sidebar.jsx  UserBadge.jsx
components/ui/: context-menu.jsx  hover-card.jsx  popover.jsx
context/: AuthContext.jsx
hooks/: useUserData.js
lib/: AllAnime.js  auth.js  diag.js  firebase.js  firebaseAdmin.js  firestore.js  prepareWatch.js  skipTimesCache.js  sourceCache.js  streamProxy.js  watchUrl.js
proxy/: .gitignore  Cargo.toml
proxy/src/: m3u8.rs  main.rs  proxy.rs  token.rs
