[package]
name    = "mugiwara-proxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mugiwara-proxy"
path = "src/main.rs"

[dependencies]
# HTTP server
axum          = { version = "0.8",  features = ["http2"] }
tokio         = { version = "1",    features = ["full"] }
tower-http    = { version = "0.6",  features = ["cors", "trace"] }

# Upstream HTTP client — streaming body
reqwest       = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }

# HMAC-SHA256 token verification
hmac          = "0.12"
sha2          = "0.10"
base64        = "0.22"

# JSON
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"

# Misc
bytes         = "1"
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow            = "1"
percent-encoding  = "2"

[profile.release]
opt-level = 3
lto       = true
strip     = true
